Se creó el formulario donde el usuario registra sus datos financieros y lo conecta con el endpoint en el back (faltan validaciones aún).

--- a/src/app/auth-page/login/login.html
+++ b/src/app/auth-page/login/login.html
@@ -12,10 +12,24 @@
         </div>
         <div class="flex flex-col gap-1 items-start w-full slide-in-down-2">
             <label for="password">Contraseña</label>
-            <input type="password" id="password" placeholder="Ingrese su contraseña" (click)="resetErrorMessage()"
-                formControlName="password" required minlength="8" [class.input-invalid]="password?.touched && password?.invalid"
-                class="card w-full p-3 md:h-15 border-1 border-gray-400 rounded-xl md:rounded-2xl text-gray-500"
-            >
+            <div class="relative w-full card">
+                <input [type]="showPassword ? 'text' : 'password'" id="password" placeholder="Ingrese su contraseña" (click)="resetErrorMessage()"
+                    formControlName="password" required minlength="8" [class.input-invalid]="password?.touched && password?.invalid"
+                    class="w-full p-3 pr-18 md:h-15 border-1 border-gray-400 rounded-xl md:rounded-2xl text-gray-500"
+                >
+                <button
+                    class="absolute right-3 top-1/4 md:top-1/3 text-gray-500"
+                    type="button"
+                    (click)="togglePassword()"
+                >
+                    @if (showPassword) {
+                        Ocultar
+                    }
+                    @else {
+                        Mostrar
+                    }
+                </button>
+            </div>
             @if (password?.touched && password?.invalid) {
                 <small class="text-red-600 ml-2">La contraseña es obligatoria y debe tener al menos 8 caracteres</small>
             }
