--- a/src/app/auth-page/restore-passw/restore-passw.html
+++ b/src/app/auth-page/restore-passw/restore-passw.html
@@ -50,7 +50,7 @@
         <div class="slide-in-down w-full flex flex-col p-6 gap-5 ">
             <div class="flex flex-col w-full items-start gap-1 mt-2">
                 <label for="">Correo Electrónico</label>
-                <input type="text" placeholder="Ingerese su correo" class="w-full p-3 border-1 border-gray-400 rounded-xl text-gray-500">
+                <input type="text" placeholder="Ingrese su correo" class="w-full p-3 border-1 border-gray-400 rounded-xl text-gray-500">
             </div>
             <div class="flex flex-col w-full items-start gap-1">
                 <label for="">Nueva Contraseña</label>
