--- a/src/app/account/account.html
+++ b/src/app/account/account.html
@@ -121,7 +121,13 @@
                 <app-history-transactions></app-history-transactions>
             }
             @else if (buttonSelected() === 3) {
-                <app-finance-account></app-finance-account>
+                <app-finance-account
+                    [presupuesto]="budget"
+                    [ingresosMensuales]="minimumIncomes"
+                    [egresosMensuales]="maximumSpendings"
+                    [ahorroMensual]="monthlySavings"
+                    [diaCorte]="cuttingDay"
+                ></app-finance-account>
             }
             @else if (buttonSelected() === 4) {
                 <app-security-account></app-security-account>
