--- a/src/app/account/info-account/info-account.css
+++ b/src/app/account/info-account/info-account.css
@@ -28,3 +28,34 @@
 .btnSaveData:active {
   animation: bounce-fade 0.5s ease-in-out;
 }
+
+.modal {
+  position: fixed;
+  inset: 0;
+  background: rgba(0,0,0,0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
+.modal-container {
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 10px;
+    width: 500px;
+    height: 550px;
+    box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    justify-content: center;
+    align-items: center;
+    transform: scale(0.05);
+    transition: all 0.20s ease;
+}
+
+.animate {
+  opacity: 1;
+  transform: scale(1);
+}
