--- a/src/app/account/profiles-account/profiles-account.html
+++ b/src/app/account/profiles-account/profiles-account.html
@@ -1,8 +1,9 @@
-<div class="slide-to-left bg-gradient-gray-h w-full flex flex-col items-start justify-center h-auto p-5 rounded-2xl gap-3">
+<main class="slide-to-left bg-gradient-gray-h w-full flex flex-col items-start justify-center h-auto p-5 rounded-2xl gap-3">
     <div class="w-full flex justify-between items-center text-white">
         <h2 class="text-2xl">Gestión de Perfiles</h2>
         <button
             class="card bg-green-primary px-4 py-2 rounded-xl text-black flex items-center gap-1"
+            (click)="openModal()"
         >
             <i class='bx  bx-plus text-xl'  ></i> 
             Nuevo Perfil
@@ -17,7 +18,7 @@
             <p class="font-semibold text-[#46E24D]">{{numeroPerfiles}}</p>
         </div>
         <!-- Tabla de los perfiles del usuario -->
-        <div class="w-full overflow-auto text-white border border-[#3B3B3B] rounded-lg">
+        <section class="w-full overflow-auto text-white border border-[#3B3B3B] rounded-lg">
             <table class="min-w-100 flex flex-col items-center p-4">
                 <tbody class="w-full flex flex-col items-start gap-4 lg:p-2">
                     @for (perfil of perfilesCreados; track perfil.id) {
@@ -36,6 +37,74 @@
                     }
                 </tbody>
             </table>
-        </div>
+        </section>
     </div>
-</div>
+    @if (modalOpen()) {
+        <div class="modal">
+            <div
+                class="modal-container"
+                [class.animate]="animateModal()"
+            >
+                <form
+                    [formGroup]="formPerfiles"
+                    (ngSubmit)="onSumbit()"
+                    class="w-full h-full flex flex-col gap-2 items-center justify-center">
+                    <div class="w-full flex flex-row items-center justify-between">
+                        <h2 class="text-2xl font-semibold">Nuevo Perfil</h2>
+                        <button (click)="closeModal()" class="text-3xl">
+                            <i class='bx  bx-x'  ></i> 
+                        </button>
+                    </div>
+                    <!-- Línea divisora -->
+                    <span class="bg-gray-200 w-full h-0.5"></span>
+
+                    <!-- Sección de los inputs del formulario -->
+                    <section class="w-full flex flex-col items-center justify-start gap-5">
+                        <div class="w-full flex flex-col gap-2 items-start justify-start">
+                            <label for="nombrePerfil">Nombre del perfil</label>
+                            <input
+                                type="text"
+                                formControlName="nombrePerfil"
+                                placeholder="Ingrese el nombre"
+                                class="card w-full p-3 border-1 border-gray-400 rounded-xl md:rounded-2xl text-gray-500">
+                        </div>
+                        <div class="w-full flex flex-col gap-2 items-start justify-start">
+                            <label for="iconos">Icono del perfil</label>
+                            <select
+                                name="iconos"
+                                id="iconos"
+                                class="card w-full p-3 border-1 border-gray-400 rounded-xl md:rounded-2xl text-gray-500">
+                                <option value="">Por Defecto</option>
+                            </select>
+                        </div>
+                        <div class="w-full flex flex-col gap-2 items-start justify-start">
+                            <div class="flex flex-row gap-2">
+                                <input type="checkbox" formControlName="habilitarPIN" class="checkboxes">
+                                <label class="label-check font-light" for="habilitarPIN">PIN de acceso</label>
+                            </div>
+                        </div>
+                        <div class="w-full flex flex-col gap-2 items-start justify-start">
+                            <label for="pin">PIN</label>
+                            <input
+                                type="password"
+                                formControlName="pin"
+                                (input)="soloNumeros($event)"
+                                placeholder="Ingrese el PIN de 6 dígitos"
+                                [class.pin-disabled]="!pinEnabled()"
+                                [class.pin-enabled]="pinEnabled()"
+                                class="w-full p-3 border-1 border-gray-400 rounded-xl md:rounded-2xl text-gray-500">
+                        </div>
+                        <!-- Línea divisora -->
+                        <span class="bg-gray-200 w-full h-0.5"></span>
+                        <button
+                            type="submit"
+                            class="card bg-green-primary p-4 rounded-2xl w-full font-medium"
+                        >
+                            Crear Perfil
+                        </button>
+                    </section>
+                </form>
+            </div>
+        </div>
+    }
+</main>
