--- a/src/styles.css
+++ b/src/styles.css
@@ -131,3 +131,44 @@ body {
 .fade-in {
     animation: fadeIn 500ms ease-in;
 }
+
+.checkboxes {
+    appearance: none;
+    cursor: pointer;
+    width: 25px;
+    height: 25px;
+    border: 2px solid #46E24D;
+    padding: 3px;
+    border-radius: 50%;
+    transition: background 0.1s ease-in;
+    display: grid;
+    place-content: center;
+}
+
+.checkboxes::before {
+    content: '';
+    background-color: #46E24D;
+    height: 25px;
+    width: 25px;
+    border-radius: 50%;
+    box-shadow: 0 0 5px #46E24D;
+    background-image: url('/check.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    rotate: -360deg;
+    scale: 0;
+    opacity: 0;
+    transition: all 200ms ease;
+}
+
+.checkboxes:checked::before {
+    rotate: 0deg;
+    scale: 1;
+    opacity: 1;
+}
+
+.checkboxes:focus-visible {
+    outline: 2px solid #46E24D;
+    outline-offset: 2px;
+}
