Se integró en la app, el manejo de perfiles, se, se creó in interceptor que inserta en el header de la request el id y el tipo de perfil del perfil actual, además se agregó el modal de crear un nuevo peril funcional, y el modal de modificar un perfil, pero no funcional aún.

--- a/src/app/account/account.html
+++ b/src/app/account/account.html
@@ -120,7 +120,7 @@
             }
             @else if (buttonSelected() === 2) {
                 <app-profiles-account></app-profiles-account>
-                <app-history-transactions></app-history-transactions>
+                <app-history-transactions [perfilActual]="currentProfile"></app-history-transactions>
             }
             @else if (buttonSelected() === 3) {
                 <app-finance-account
