--- a/src/app/account/history-transactions/history-transactions.html
+++ b/src/app/account/history-transactions/history-transactions.html
@@ -4,7 +4,7 @@
     </div>
     <div class="flex flex-row gap-1 items-center">
         <p class="text-white">Transacciones de:</p>
-        <p class="font-semibold text-[#46E24D]">{{currentProfile}}</p>
+        <p class="font-semibold text-[#46E24D]">{{perfilActual()}}</p>
     </div>
     <!-- Línea divisora -->
     <span class="bg-gray-details w-full h-0.5"></span>
