--- a/src/app/account/profiles-account/profiles-account.css
+++ b/src/app/account/profiles-account/profiles-account.css
@@ -8,7 +8,7 @@
   z-index: 1000;
 }
 
-.modal-container {
+.modal-container, .modal-container-update {
     background-color: #fff;
     padding: 20px;
     border-radius: 10px;
@@ -22,6 +22,10 @@
     align-items: center;
     transform: scale(0.02);
     transition: all 0.20s ease;
+}
+
+.modal-container-update {
+  height: 640px;
 }
 
 .animate {
