Se modificaron algunos detalles en la UI basados en los permisos de un perfil, y además, se creo el modal para requerir el pin de un perfil.

--- a/src/app/account/info-account/info-account.css
+++ b/src/app/account/info-account/info-account.css
@@ -68,3 +68,11 @@
   opacity: 1;
   transform: scale(1);
 }
+
+.edit-disabled {
+  background-color: #ababab;
+}
+
+.edit-enabled {
+  background-color: #46E24D;
+}
