--- a/src/app/account/info-account/info-account.html
+++ b/src/app/account/info-account/info-account.html
@@ -2,7 +2,13 @@
     <!-- Encabezado de la información de la cuenta del usuario -->
     <div class="flex flex-row justify-between w-full items-center py-1">
         <h2 class="text-2xl text-white">Información</h2>
-        <button (click)="openModal()" class="card bg-green-primary px-4 py-2 rounded-xl">
+        <button
+            (click)="openModal()"
+            [disabled]="!isSuperUser()"
+            [class.edit-disabled]="!isSuperUser()"
+            [class.edit-enabled]="isSuperUser()"
+            class="px-4 py-2 rounded-xl"
+            >
             Editar
             <i class='bx  bx-edit-alt'  ></i> 
         </button>
