--- a/src/app/profiles-selector/profiles-selector.html
+++ b/src/app/profiles-selector/profiles-selector.html
@@ -3,9 +3,9 @@
         <h2 class="text-white text-5xl font-medium">Seleccione un perfil para entrar a Finnancer</h2>
         <section class="flex flex-col lg:flex-row w-full overflow-x-auto gap-10 items-center justify-center">
             @for(perfil of perfiles; track perfil.id_perfil) {
-                <div class="slide-in-up text-white flex flex-col items-center justify-center gap-3 w-56 bg-gradient-gray-v rounded-3xl p-5">
+                <div class="slide-in-up text-white flex flex-col items-center justify-between gap-3 w-56 min-h-70 bg-gradient-gray-v rounded-3xl p-5">
                     <p><i [class]="icons[+perfil.icono]" class="bg-[#46E24D] rounded-full p-5 text-black text-2xl"></i></p>
-                    <p class="text-3xl font-light">{{perfil.nombre}}</p>
+                    <p class="text-3xl font-light text-center">{{perfil.nombre}}</p>
                     <button
                         class="menu rounded-full py-4 px-6 text-white font-thin"
                         (click)="seleccionarPerfil(perfil)"
@@ -17,10 +17,38 @@
         </section>
     </div>
     @if(pinRequired()) {
-        <form action="">
-            <label for=""></label>
-            <input type="password" placeholder="Ingrese el pin de 6 digitos">
-            <button type="submit" class="menu rounded-full py-4 px-6 text-white font-thin">Ingresar</button>
-        </form>
+        <div class="modal">
+            <div
+                class="modal-container"
+                [class.animate]="animateModal()"
+            >
+                <section class="w-full h-full flex flex-col gap-2 items-center justify-center">
+                    <div class="w-full flex felx-row justify-between items-center">
+                        <h2 class="text-2xl">{{nombrePerfil()}}</h2>
+                        <button (click)="closeModal()" type="button" class="text-3xl">
+                            <i class='bx  bx-x'  ></i> 
+                        </button>
+                    </div>
+                    <!-- Línea divisora -->
+                    <span class="bg-gray-200 w-full h-0.5"></span>
+
+                    <section class="w-full h-full flex flex-col items-start justify-center gap-1">
+                        <label for="">Ingrese el PIN de 6 dígitos</label>
+                        <input
+                            type="password"
+                            [formControl]="pinProfile"
+                            placeholder="PIN de 6 dígitos"
+                            maxlength="6"
+                            class="card w-full p-3 border-1 border-gray-400 rounded-xl md:rounded-2xl text-gray-500">
+                    </section>
+                    <button 
+                        (click)="validatePIN()" class="menu rounded-full py-4 px-6 text-white font-thin"
+                    >
+                        Ingresar
+                    </button>
+                    <p class="text-red-500 text-center text-sm">{{mensajeError()}}</p>
+                </section>
+            </div>
+        </div>
     }
 </main>
