--- a/src/app/header-dashboard/header-dashboard.html
+++ b/src/app/header-dashboard/header-dashboard.html
@@ -3,7 +3,7 @@
     <header class="desktop-menu flex flex-row gap-2 p-4">
         <button class="bg-green-primary rounded-full p-3">Logo</button>
         <button (click)="goToAccount()" class="menu rounded-full p-4 text-white font-thin">Mi Cuenta</button>
-        <button class="menu rounded-full py-4 px-6 text-white font-thin">Transacciones</button>
+        <button (click)="goToTransactions()" class="menu rounded-full py-4 px-6 text-white font-thin">Transacciones</button>
         <button (click)="goToCategories()" class="menu rounded-full py-4 px-6 text-white font-thin">Categorías</button>
         <button class="menu rounded-full py-4 px-6 text-white font-thin">Clientes y Proveedores</button>
         <button class="menu rounded-full py-4 px-6 text-white font-thin">Balance</button>
@@ -38,7 +38,10 @@
                     Mi cuenta
                     <i class='bx  bx-user text-xl'  ></i>
                 </li>
-                <li class="flex items-center justify-center gap-2">
+                <li
+                    class="flex items-center justify-center gap-2"
+                    routerLink="/transactions"
+                >
                     Transacciones
                     <i class='bx  bx-dollar text-xl'  ></i>
                 </li>
