--- a/src/app/header-dashboard/header-dashboard.html
+++ b/src/app/header-dashboard/header-dashboard.html
@@ -5,7 +5,7 @@
         <button (click)="goToAccount()" class="menu rounded-full p-4 text-white font-thin">Mi Cuenta</button>
         <button (click)="goToTransactions()" class="menu rounded-full py-4 px-6 text-white font-thin">Transacciones</button>
         <button (click)="goToCategories()" class="menu rounded-full py-4 px-6 text-white font-thin">Categorías</button>
-        <button class="menu rounded-full py-4 px-6 text-white font-thin">Clientes y Proveedores</button>
+        <button (click)="goToPersons()" class="menu rounded-full py-4 px-6 text-white font-thin">Clientes y Proveedores</button>
         <button class="menu rounded-full py-4 px-6 text-white font-thin">Balance</button>
     </header>
     <!-- Header que aparece en móviles -->
@@ -52,7 +52,10 @@
                     Categorías
                     <i class='bx  bx-bar-chart-square text-xl'  ></i>
                 </li>
-                <li class="flex items-center justify-center gap-2">
+                <li
+                    class="flex items-center justify-center gap-2"
+                    routerLink="/persons"
+                    >
                     Clientes y Proveedores
                     <i class='bx  bx-move-vertical bx-rotate-90 text-xl'    ></i> 
                 </li>
