--- a/src/app/dashboard/last-transactions/last-transactions.html
+++ b/src/app/dashboard/last-transactions/last-transactions.html
@@ -6,10 +6,12 @@
             <table class="w-full">
                 <tbody class="flex flex-col gap-4">
                     @for (transaccion of ultimasTransacciones; track transaccion.id) {
-                        <tr class="flex justify-between p-2">
-                            <td>{{transaccion.icono}}</td>
+                        <tr class="flex justify-between items-center p-2">
+                            <td class="rounded-full p-2 bg-[#46E24D] w-[40px] text-center">
+                                <i [class]="icons[+transaccion.icono]"></i>
+                            </td>
                             <td class="font-thin">{{transaccion.nombre}}</td>
-                            <td class="font-thin">{{transaccion.monto}}</td>
+                            <td class="font-thin">${{transaccion.monto}}</td>
                         </tr>
                     }
                     @empty {
