--- a/src/app/categories/categories.css
+++ b/src/app/categories/categories.css
@@ -1,31 +1,97 @@
-.modal {
+.modal-cat {
   position: fixed;
   inset: 0;
   background: rgba(0,0,0,0.5);
   display: flex;
-  justify-content: center;
-  align-items: center;
+  justify-content: start;
+  align-items: start;
   z-index: 1000;
 }
 
-.modal-container {
-    background-color: #fff;
-    padding: 15px;
-    border-radius: 10px;
-    width: 400px;
-    height: 300px;
-    text-align: center;
-    box-shadow: 0 4px 8px rgba(0,0,0,0.2);
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-    justify-content: space-between;
-    align-items: center;
-    transform: scale(0.1);
-    transition: all 0.20s ease;
+.modal-categoria-container{
+  background-color: #fff;
+  padding: 10px 20px;
+  width: 600px;
+  height: 100%;
+  box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  justify-content: center;
+  align-items: center;
+  transform: translateX(-100%);
+  transition: all 0.20s ease;
 }
 
-.animate {
+.animate-cat {
   opacity: 1;
-  transform: scale(1);
+  transform: translateX(0);
+}
+
+.modal-sub {
+  position: fixed;
+  inset: 0;
+  background: rgba(0,0,0,0.5);
+  display: flex;
+  justify-content: end;
+  align-items: end;
+  z-index: 1000;
+}
+
+.modal-subcategoria-container {
+  background-color: #fff;
+  padding: 10px 20px;
+  width: 600px;
+  height: 100%;
+  box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  justify-content: center;
+  align-items: center;
+  transform: translateX(100%);
+  transition: transform 0.20s ease;
+}
+
+.animate-sub {
+  opacity: 1;
+  transform: translateX(0);
+}
+
+@media (max-width: 768px) {
+  .modal-container {
+      width: 100%;
+      height: 100%;
+      padding: 15px;
+  }
+}
+
+.filter-activate {
+  background-color: #151515;
+}
+
+.filter-inactivate {
+  background-color: var(--color-zinc-800);
+}
+
+@keyframes bounce-fade {
+  0% {
+    transform: scale(0.95);
+    opacity: 0;
+  }
+  40% {
+    transform: scale(1.02);
+    opacity: 1;
+  }
+  60% {
+    transform: scale(0.99);
+  }
+  100% {
+    transform: scale(1);
+    opacity: 1;
+  }
+}
+
+.bounce {
+  animation: bounce-fade 500ms ease-in-out;
 }
